# OutfitPi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  _diag.py  _diag_touch.py  _shot.py  _test_dropdown.py  _trace_dropdown.py  app.py  config.example.yaml  install.sh  mkdocs.yml  pyproject.toml  release-please-config.json  requirements.txt  versions.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: promote.md
.github/workflows/: auto-resolve-bot-threads.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  dependency-review.yml  docs.yml  release-please.yml
0.4/: 404.html  index.html  sitemap.xml
0.4/daily-use/: index.html
0.4/settings/: index.html
0.4/setup/: index.html
0.4/troubleshooting/: index.html
0.4/updates/: index.html
0.5-beta/: 404.html  index.html  sitemap.xml
0.5-beta/daily-use/: index.html
0.5-beta/search/: search_index.json
0.5-beta/settings/: index.html
0.5-beta/setup/: index.html
docs/: daily-use.md  index.md  macros.py  settings.md  setup.md  troubleshooting.md  updates.md
outfitpi/: __init__.py  config_manager.py  location.py  network_utils.py  recommender.py  telemetry.py  updater.py  weather.py
scripts/: capture_docs_screenshots.py  kiosk.sh  outfitpi.service  smoke_test.py  start.sh
templates/: index.html  settings.html  setup.html
tests/: conftest.py  test_config_manager.py  test_location.py  test_recommender.py  test_routes.py  test_setup.py  test_updater.py  test_upgrade_path.py  test_weather.py
(+21 files in other folders)
